<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/scrollView"
    android:layout_margin="5dp"
    android:scrollbarStyle="insideOverlay"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/BtnDark"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:text="@string/dark_theme"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/white" />

        <Button
            android:id="@+id/BtnLight"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:text="@string/light_theme"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:src="@drawable/img9">

        </ImageView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="7dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:padding="10dp"
                android:textDirection="firstStrong"

                android:text="@string/in_android_development_an_intent_serves_as_a_messaging_object_that_facilitates_communication_between_different_app_components_here_s_what_you_need_to_know_definition_an_intent_represents_an_intention_to_perform_an_action_it_allows_components_such_as_activities_services_or_broadcast_receivers_to_request_actions_from_other_components_within_the_android_system1_purpose_intents_are_used_for_various_purposes_starting_activities_to_navigate_from_one_activity_to_another_an_app_uses_an_intent_to_define_its_intention_to_perform_a_specific_action_for_example_when_you_call_startactivity_you_pass_an_intent_to_identify_and_start_the_appropriate_activity2_inter_app_communication_apps_can_use_intents_to_communicate_with_each_other_for_instance_one_app_can_request_another_app_to_perform_a_specific_task_by_sending_an_intent_explicit_and_implicit_intents_intents_can_be_explicit_targeting_a_specific_component_or_implicit_allowing_the_system_to_find_the_appropriate_component_based_on_the_action_requested_best_practices_documenting_intents_popular_apps_including_google_s_suite_of_android_applications_document_their_intents_for_other_developers_to_use_this_practice_helps_establish_consistency_and_encourages_collaboration_among_apps3_in_summary_intents_play_a_crucial_role_in_android_development_by_enabling_communication_between_components_and_defining_actions_within_an_app">

            </TextView>

        </ScrollView>

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:textStyle="bold"
            android:textColor="@color/white" >

        </Button>

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/click_here_for_profile"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="#0C5C60">

        </TextView>

    </LinearLayout>

</ScrollView>